Add DOI in paper.bib and tidy the file.

--- a/paper/paper.bib
+++ b/paper/paper.bib
@@ -1,7 +1,7 @@
 
 @Article{	  alouges_fem_2018,
   author	= {Alouges, F. and Aussal, M.},
-  title		= {{FEM} and {BEM} simulations with the Gypsilab framework},
+  title		= {{FEM} and {BEM} simulations with the {Gypsilab} framework},
   journal	= {SMAI-Journal of computational mathematics},
   year		= {2018},
   volume	= {4},
@@ -11,27 +11,22 @@
 
 @Article{	  ancellin_hierarchical_2019,
   author	= {Ancellin, M. and Dias, F.},
-  title		= {Hierarchical Toeplitz matrices for the linear potential
-		  flow simulation of the floating bodies with local
-		  regularities},
+  title		= {Hierarchical {Toeplitz} matrices for the linear potential flow simulation of wave energy converters with local regularities},
   journal	= {in preparation},
   year		= {2019}
 }
 
 @InProceedings{	  ancellin_using_2018,
   author	= {Ancellin, M. and Dias, F.},
-  booktitle	= {{ASME 2018 37th International Conference on Ocean,
-		  Offshore and Arctic Engineering (OMAE2018)}},
-  title		= {Using the floating body symmetries to speed up the
-		  numerical computation of hydrodynamics coefficients with
-		  {N}emoh.},
+  booktitle	= {{ASME 2018 37th International Conference on Ocean, Offshore and Arctic Engineering (OMAE2018)}},
+  title		= {Using the floating body symmetries to speed up the numerical computation of hydrodynamics coefficients with {Nemoh}},
   year		= {2018},
-  pages		= {V009T13A031}
+  pages		= {V009T13A031},
+  doi       = {10.1115/OMAE2018-77924}
 }
 
 @Book{		  babarit_ocean_2017,
-  title		= {Ocean wave energy conversion: resource, technologies and
-		  performance},
+  title		= {Ocean wave energy conversion: resource, technologies and performance},
   author	= {Babarit, A.},
   year		= {2017},
   publisher	= {Elsevier}
@@ -63,18 +58,15 @@
 
 @InProceedings{	  delhommeau_seakeeping_1993,
   author	= {Delhommeau, G.},
-  title		= {The seakeeping codes Aquadyn and Aquaplus},
-  booktitle	= {19th WEGEMT School, Numerical Simulation of Hydrodynamics:
-		  Ships and Offshore Structures},
+  title		= {The seakeeping codes {Aquadyn} and {Aquaplus}},
+  booktitle	= {19th {WEGEMT} School, Numerical Simulation of Hydrodynamics: Ships and Offshore Structures},
   year		= {1993},
-  eventtitle	= {19th WEGEMT School, Numerical Simulation of Hydrodynamics:
-		  Ships and Offshore Structures}
+  eventtitle	= {19th {WEGEMT} School, Numerical Simulation of Hydrodynamics: Ships and Offshore Structures}
 }
 
 @Article{	  f2py,
   author	= {Peterson, P.},
-  title		= {{F2PY}: a Tool for Connecting Fortran and Python
-		  Programs},
+  title		= {{F2PY}: a Tool for Connecting Fortran and Python Programs},
   journal	= {Int. J. Comput. Sci. Eng.},
   volume	= {4},
   number	= {4},
@@ -83,22 +75,9 @@
   doi		= {10.1504/IJCSE.2009.029165}
 }
 
-@Article{	  fabregasflavia_numerical_2018,
-  author	= {F{\`a}bregas Flavi{\`a}, F and McNatt, C and Rong{\`e}re,
-		  F and Babarit, A and Cl{\'e}ment, AH},
-  title		= {A numerical tool for the frequency domain simulation of
-		  large arrays of identical floating bodies in waves},
-  journal	= {Ocean Engineering},
-  year		= {2018},
-  volume	= {148},
-  pages		= {299--311},
-  publisher	= {Elsevier}
-}
-
 @Book{		  folley_numerical_2016,
   author	= {Folley, M.},
-  title		= {Numerical modelling of wave energy converters:
-		  State-of-the-art techniques for single devices and arrays},
+  title		= {Numerical modelling of wave energy converters: State-of-the-art techniques for single devices and arrays},
   year		= {2016},
   publisher	= {Academic Press}
 }
@@ -115,7 +94,7 @@
 
 @Article{	  matplotlib,
   author	= {Hunter, J. D.},
-  title		= {Matplotlib: A 2D graphics environment},
+  title		= {{Matplotlib}: A 2D graphics environment},
   journal	= {Computing In Science \& Engineering},
   volume	= {9},
   number	= {3},
@@ -127,7 +106,7 @@
 
 @Misc{		  meshmagick,
   author	= {F. Rongère},
-  title		= {Meshmagick},
+  title		= {{Meshmagick}},
   year		= {2017},
   url		= {https://github.com/LHEEA/meshmagick}
 }
@@ -138,7 +117,6 @@
   year		= {1977},
   publisher	= {MIT Press},
   isbn		= {9780262140263},
-  file		= {:cours_et_references/Newman__Marine_hydrodynamics__1977.pdf:PDF}
 }
 
 @Book{		  numpy,
@@ -146,7 +124,7 @@
   title		= {{NumPy}: A guide to {NumPy}},
   year		= {2006},
   publisher	= {Trelgol Publishing},
-  url		= "http://www.numpy.org/"
+  url		= {http://www.numpy.org/}
 }
 
 @InProceedings{	  penalbaretes_using_2017,
@@ -159,8 +137,7 @@
 
 @Misc{		  pytest,
   title		= {pytest 4.3},
-  author	= {Krekel, H. and Oliveira, B. and Pfannschmidt, R. and
-		  Bruynooghe, F. and Laugher, B. and Bruhin, F.},
+  author	= {Krekel, H. and Oliveira, B. and Pfannschmidt, R. and Bruynooghe, F. and Laugher, B. and Bruhin, F.},
   year		= {2004},
   url		= {https://github.com/pytest-dev/pytest}
 }
@@ -180,22 +157,13 @@
   isbn		= {978-1-930934-19-1}
 }
 
-@TechReport{wamit,
-  author      = {WAMIT},
-  title       = {WAMIT 7.2 User Manual},
-  institution = {WAMIT Inc.},
-  year        = {2016},
-}
-
 @Article{	  xie_comparison_2018,
-  author	= {Xie, C. and Choi, Y. and Rong{\`e}re, F. and Cl{\'e}ment,
-		  A. and Delhommeau, G. and Babarit, A.},
-  title		= {Comparison of existing methods for the calculation of the
-		  infinite water depth free-surface Green function for the
-		  wave--structure interaction problem},
+  author	= {Xie, C. and Choi, Y. and Rong{\`e}re, F. and Cl{\'e}ment, A. and Delhommeau, G. and Babarit, A.},
+  title		= {Comparison of existing methods for the calculation of the infinite water depth free-surface Green function for the wave--structure interaction problem},
   journal	= {Applied Ocean Research},
   year		= {2018},
   volume	= {81},
   pages		= {150--163},
+  doi       = {10.1016/j.apor.2018.10.007}
 }
 
